# vo2-max-qc

./: README.md  highlight_df.py  poetry_to_conda_dep.py  pyproject.toml  qc.py  qc_pyqt5.py  qc_tkinter.py  readme.md  req.yml  requirements.yml
data/M10986868/: M10986868_VO2, RS1.PNG_values_values.txt  M10986868_dataframe.csv
edited/M10986868/: M10986868_dataframe.csv
